--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import BlogHeader from '../components/BlogHeader.astro';
 import BlogPost from '../components/BlogPost.astro';
+import BlogFooter from '../components/BlogFooter.astro';
 
 
 const { content } = Astro.props;
@@ -20,5 +21,6 @@ const { title, description, publishDate, author, heroImage, permalink, alt } = c
 				<slot />
 			</BlogPost>
 		</div>
+		<BlogFooter />
 	</body>
 </html>
