--- a/src/components/BlogFooter.astro
+++ b/src/components/BlogFooter.astro
@@ -4,17 +4,20 @@
 		David Puente Rodríguez © 2022
 	</div>
 	<nav class="footer-nav">
-		<a href="https://davydpr.com/About/">About</a>
+		<a class="nounderline" href="https://davydpr.com/About/">About</a>
 		<span class="footer-nav-dot">.</span>
-		<a href="https://davydpr.com/Contact/">Contact</a>
+		<a class="nounderline" href="https://davydpr.com/Contact/">Contact</a>
 	</nav>
 	<div class="footer-right">
-		The bright side of hacking >_
+		The bright side of hacking &gt_
 	</div>
 </div>
 </footer>
 
 <style>
+	.nounderline{
+		text-decoration: none;
+	}
 	.container{
 		margin-left: auto;
 		margin-right: auto;
@@ -22,29 +25,19 @@
 		padding-left: 2rem;
 		padding-right: 2rem;
 		width: 100%;
-		/* margin-left: auto;
-		margin-right: auto;
-		max-width: 65em;
-		padding-left: 2rem;
-		padding-right: 2rem;
-		width: 100%; */
 	}
 	.footer-nav-dot{
-		font-size: 1rem;
-		padding: 0.2rem;
-		padding-bottom: 0.1rem;
+		font-size: 1.3rem;
+		padding: 0 .7rem;
+		color: var(--theme-text-lighter);
+		/* padding-bottom: 0.1rem; */
 	}
 	.footer-nav{
 		text-decoration: none;
-		flex-wrap: wrap;
 		justify-content: center;
 		font-size: 0.9rem;
-		padding-left: 5vw;
-		padding-right: 5vw;
 	}
 	.footer-right{
-		padding-left: 5vw;
-		padding-right: 5vw;
 		font-size: 0.9rem;
 		color: var(--theme-text-lighter);
 		display: flex;
@@ -57,24 +50,25 @@
 		align-items: center;
 		display: flex;
 		font-weight: 700;
-		padding-left: 5vw;
-		padding-right: 5vw;
+		/* padding-left: 10px;
+		padding-right: 10px; */
 	}
 	.footer-inner{
 		display: grid;
 		font-size: 1.2rem;
 		grid-template-columns: 1fr auto 1fr;
-		padding-left: 5vw;
-		padding-right: 5vw;
-		padding-bottom: 1.2rem;
+		padding-bottom: 1.2rem
 		padding-top: 1.5rem;
+		justify-content: center;
+		flex-wrap: wrap;
 	}
 	.site-footer{
+		box-sizing: inherit;
 		padding-top: 4rem;
 		padding: 25px 0;
 		margin-top: 6rem;
-		padding-left: 2rem;
-		padding-right: 2rem;
+		padding-left: 2vw;
+		padding-right: 2vw;
 		border-top: 3px solid var(--theme-divider);
 	}
 	header {
