decoration, image and colors, not applied

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,6 +71,7 @@ allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(
 	<body>
 		<BlogHeader />
 		<div class="wrapper">
+			<!-- <img src="../../docs/assets/blog/angle_pic.jpg" width="100%" height="100%"> -->
 			<main class="content">
 				<section class="intro">
 					<h1 class="latest">{pagetitle}</h1>
