--- a/src/components/BlogFooter.astro
+++ b/src/components/BlogFooter.astro
@@ -41,8 +41,6 @@
 		font-size: 0.9rem;
 		color: var(--theme-text-lighter);
 		display: flex;
-		margin-left: auto; 
-		margin-right: 0;
 	}
 	.footer-left{
 		font-size: 0.9rem;
@@ -50,17 +48,15 @@
 		align-items: center;
 		display: flex;
 		font-weight: 700;
-		/* padding-left: 10px;
-		padding-right: 10px; */
 	}
 	.footer-inner{
-		display: grid;
+		display: flex;
 		font-size: 1.2rem;
 		grid-template-columns: 1fr auto 1fr;
 		padding-bottom: 1.2rem
 		padding-top: 1.5rem;
-		justify-content: center;
-		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: center;
 	}
 	.site-footer{
 		box-sizing: inherit;
@@ -71,6 +67,16 @@
 		padding-right: 2vw;
 		border-top: 3px solid var(--theme-divider);
 	}
+
+@media screen and (max-width: 600px) {
+	.footer-inner{
+		flex-direction: column;
+	}
+	.footer-nav{
+		padding-bottom: 4px;
+	}
+}
+
 	header {
 		padding-top: 1rem;
 		padding-bottom: 1rem;
