--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -106,6 +106,10 @@ body {
 	line-height: 1.625;
 }
 
+.wrapper-header{
+	display: flex;
+	justify-content: space-between;
+}
 .wrapper {
 	margin-left: auto;
 	margin-right: auto;
