--- a/src/components/BlogHeader.astro
+++ b/src/components/BlogHeader.astro
@@ -16,9 +16,9 @@
 		</h1>
 	</article>
 	<div class="nav-header">
-		<div>Posts</div>
-		<div>Contact</div>
-		<div>example</div>
+		<a href="https://davydpr.com/#">Posts</a> <!-- make landing page for posts -->
+		<a href="https://davydpr.com/#">Contact</a> <!-- make landing page for posts -->
+		<a href="https://davydpr.com/#">About</a>
 	</div>
 	<div>
 		<a class="social-item" href="https://github.com/Davyd11">
@@ -50,8 +50,10 @@
 		justify-content: space-between;
 	}
 
-	.nav-header div {
+	.nav-header a {
 		margin: 0 0.5em;
+		color: black;
+		text-decoration: none;
 	}
 
 	.header-subitem {
