--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,9 @@ let pagetitle = 'Posts';
 let description = 'The perfect starter for your perfect blog.';
 let permalink = 'https://example.com/';
 
+const events = Astro.fetchContent("./aboutme/About.md");
+const featuredEvent = events[0];
+
 // Data Fetching: List all Markdown posts in the repo.
 
 let allPosts = await Astro.fetchContent('./posts/*.md');
