--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -111,6 +111,7 @@ body {
 	justify-content: space-between;
 }
 .wrapper {
+	margin-bottom: 2.5rem;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 65em;
