--- a/src/components/BlogHeader.astro
+++ b/src/components/BlogHeader.astro
@@ -51,9 +51,10 @@
 	}
 
 	.nav-header a {
-		margin: 0 0.5em;
+		margin: 0 1em;
 		color: black;
 		text-decoration: none;
+		outline: none;
 	}
 
 	.header-subitem {
