changes in urls and color code

--- a/src/components/BlogHeader.astro
+++ b/src/components/BlogHeader.astro
@@ -16,9 +16,9 @@
 		</h1>
 	</article>
 	<div class="nav-header">
-		<a href="https://davydpr.com/#">Posts</a> <!-- make landing page for posts -->
-		<a href="https://davydpr.com/#">Contact</a> <!-- make landing page for posts -->
-		<a href="https://davydpr.com/#">About</a>
+		<a href="#">Posts</a> <!-- make landing page for posts -->
+		<a href="/contact/Contact">Contact</a> <!-- make landing page for posts -->
+		<a href="/aboutme/About">About</a>
 	</div>
 	<div>
 		<a class="social-item" href="https://github.com/Davyd11">
