purple color lightned

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -23,7 +23,7 @@
 	--color-gray-900: #111827;
 
 	/* --color-blue: #3894ff; */
-	--color-blue: #5437f7;
+	--color-blue: #7674e2;
 	--color-blue-rgb: 56, 148, 255;
 	--color-dark-blue: #6C6F93;
 	--color-dark-blue-rgb: 108, 111, 147;
