--- a/src/components/BlogFooter.astro
+++ b/src/components/BlogFooter.astro
@@ -4,9 +4,9 @@
 		David Puente Rodríguez © 2022
 	</div>
 	<nav class="footer-nav">
-		<a class="nounderline" href="https://davydpr.com/About/">About</a>
+		<a class="nounderline" href="/aboutme/About">About</a>
 		<span class="footer-nav-dot">.</span>
-		<a class="nounderline" href="https://davydpr.com/Contact/">Contact</a>
+		<a class="nounderline" href="/contact/Contact">Contact</a>
 	</nav>
 	<div class="footer-right">
 		The bright side of hacking &gt_
